--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="cz.havlena.ffmpeg.ui"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon_mdpi" android:label="@string/app_name" android:debuggable="true">
         <activity 
         		  android:name=".FFMpegPlayerActivity"
                   android:label="@string/app_name"
@@ -24,7 +24,7 @@
             
         </activity>
          <activity 
-        		  android:name=".ConnectivityManagerTestActivity"
+        		  android:name=".StreamsGrid"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
 		<intent-filter>
@@ -45,6 +45,8 @@
 
     </application>
     <uses-sdk android:minSdkVersion="8"/>
+     <uses-permission android:name="android.permission.CAMERA" />
+     <uses-feature android:name="android.hardware.camera" />
 	 <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WAKE_LOCK"/>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
