--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="cz.havlena.ffmpeg.ui"
       android:versionCode="1"
       android:versionName="0.1">
-    <application android:icon="@drawable/icon_mdpi" android:label="@string/app_name" android:debuggable="true" >
+    <application android:icon="@drawable/icon_mdpi" android:label="@string/app_name" android:debuggable="true">
         <activity 
         		  android:name=".FFMpegPlayerActivity"
                   android:label="@string/app_name"
@@ -19,13 +19,21 @@
                   android:label="@string/select_input_file"
                   android:screenOrientation="portrait">
 		<intent-filter>
-				
                 <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
             
         </activity>
          <activity 
         		  android:name=".StreamsGrid"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait">
+		<intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>
+            
+        </activity>
+         <activity 
+        		  android:name="StreamInfoDetails"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
 		<intent-filter>
