--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -21,8 +21,17 @@
 		<intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
-            
         </activity>
+        
+         <activity 
+        		  android:name=".ScheduleView"
+                  android:label="@string/scheduletitle"
+                  android:screenOrientation="portrait">
+		<intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>    
+        </activity>
+        
          <activity 
         		  android:name=".StreamsGrid"
                   android:label="@string/app_name"
