--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -33,6 +33,22 @@
         </activity>
         
          <activity 
+        		  android:name=".MediaPlayer_Android"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait">
+		<intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>    
+        </activity>
+        <activity 
+        		  android:name=".MediaPlayerAudio_Android"
+                  android:label="@string/app_name"
+                  android:screenOrientation="portrait">
+		<intent-filter>
+                <category android:name="android.intent.category.LAUNCHER" />
+        </intent-filter>    
+        </activity>
+         <activity 
         		  android:name=".StreamsGrid"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
