--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="kab.tv.ui"
       android:versionCode="1"
-      android:versionName="0.61">
+      android:versionName="0.7">
     <application android:icon="@drawable/icon_mdpi" android:label="@string/app_name" android:debuggable="true">
         <activity 
         		  android:name=".FFMpegPlayerActivity"
@@ -35,7 +35,8 @@
          <activity 
         		  android:name=".MediaPlayer_Android"
                   android:label="@string/playing"
-                   android:screenOrientation="sensor">
+                   android:screenOrientation="sensor"
+                   android:configChanges="keyboardHidden|orientation">
 		<intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>    
