--- a/com.kab.channel66/bin/AndroidManifest.xml
+++ b/com.kab.channel66/bin/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kab.channel66"
-    android:versionCode="5"
-    android:versionName="0.91" >
+    android:versionCode="7"
+    android:versionName="0.93" >
 
     <uses-permission android:name="android.permission.INTERNET" >
     </uses-permission>
@@ -16,14 +16,17 @@
     </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" >
     </uses-permission>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
+    
+    <!--  <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" >
     </uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" >
     </uses-permission>
+    -->
     <uses-permission android:name="android.permission.WAKE_LOCK" >
     </uses-permission>
 
     <application
+        
         android:icon="@drawable/icon"
         android:label="@string/app_name"
           >
@@ -52,6 +55,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+         <activity
+            android:name=".BackgroundPlayer"
+            android:label="@string/app_name" >
+        </activity>
         <activity
             android:name=".VideoPlayerActivity"
             android:configChanges="screenSize|orientation|keyboard|keyboardHidden|navigation"
@@ -65,7 +72,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data
+             <!--    <data
                     android:mimeType="audio/*"
                     android:scheme="http" />
                 <data
@@ -89,6 +96,7 @@
                 <data
                     android:mimeType="audio/*"
                     android:scheme="mms" />
+                     -->
                 <data
                     android:mimeType="video/*"
                     android:scheme="http" />
@@ -184,7 +192,7 @@
                 <data android:scheme="udp" />
                 <data android:scheme="gopher" />
                 <data android:mimeType="video/*" />
-                <data android:mimeType="audio/*" />
+                <!-- <data android:mimeType="audio/*" /> -->
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
@@ -321,7 +329,7 @@
                 </intent-filter>
         </activity>
         
-         
+      <service android:name="BackgroundPlayer"  android:enabled="true"></service>   
     </application>
 
     <uses-sdk
