--- a/com.kab.channel66/AndroidManifest.xml
+++ b/com.kab.channel66/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.kab.channel66"
-    android:versionCode="17"
-    android:versionName="1.03" >
+    android:versionCode="18"
+    android:versionName="1.1" >
 
     
      <uses-permission android:name="android.permission.READ_PHONE_STATE" >
@@ -36,6 +36,12 @@
         android:icon="@drawable/icon"
         android:label="@string/app_name"
           >
+          <activity
+            android:name="io.vov.vitamio.activity.InitActivity"
+            android:configChanges="orientation|screenSize|smallestScreenSize|keyboard|keyboardHidden|navigation"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.NoTitleBar"
+            android:windowSoftInputMode="stateAlwaysHidden" />
         <activity
             android:name=".VideoViewDemo"
             android:configChanges="screenSize|orientation|keyboard|keyboardHidden|navigation"
