--- a/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
+++ b/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
@@ -45,5 +45,12 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+	<key>NSAppTransportSecurity</key>
+<dict>
+  <!--Include to allow all connections (DANGER)-->
+  <key>NSAllowsArbitraryLoads</key>
+      <true/>
 </dict>
+</dict>
+
 </plist>
