--- a/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
+++ b/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Channel 66</string>
+	<string>Bnei Baruch Kabbalah</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
@@ -17,7 +17,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
-	<string>Channel 66</string>
+	<string>Bnei Baruch Kabbalah</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
@@ -34,11 +34,11 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.4</string>
+	<string>2.4.1</string>
 	<key>FacebookAppID</key>
 	<string>243615172677749</string>
 	<key>FacebookDisplayName</key>
-	<string>channel 66</string>
+	<string>Bnei Baruch Kabbalah</string>
 	<key>LSApplicationQueriesSchemes</key>
 	<array>
 		<string>fbapi</string>
