--- a/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
+++ b/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Bnei Baruch Kabbalah</string>
+	<string>Kabbalah TV</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIcons</key>
@@ -21,7 +21,7 @@
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>1.7</string>
+	<string>2.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
 	<key>CFBundleURLTypes</key>
@@ -34,7 +34,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.4.1</string>
+	<string>2.5.2</string>
 	<key>FacebookAppID</key>
 	<string>243615172677749</string>
 	<key>FacebookDisplayName</key>
