--- a/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
+++ b/iphone-channel66/KxMovieExample/KxMovieExample-Info.plist
@@ -34,7 +34,7 @@
 		</dict>
 	</array>
 	<key>CFBundleVersion</key>
-	<string>2.5.2</string>
+	<string>2.5.3</string>
 	<key>FacebookAppID</key>
 	<string>243615172677749</string>
 	<key>FacebookDisplayName</key>
@@ -59,7 +59,7 @@
 		<string>remote-notification</string>
 	</array>
 	<key>UIFileSharingEnabled</key>
-	<true/>
+	<false/>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>armv7</string>
